--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-hooks-helper": "^1.6.0"
   }
 }
