--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,16 @@
 # version docker compose
-version: '3.7'
+version: '3.3'
+
 services:
   app:
+    image: nexus.devops.ifrn.edu.br/{{ repository|lower }}:latest
+    restart: always
     stdin_open: true
-    container_name: react
-    build:
-      context: .
-      dockerfile: Dockerfile
-      # dockerfile: Dockerfile.dev # development
     volumes:
       - '.:/app'
       - '/app/node_modules' # necessary to not overwrite the build dir.
     ports:
-      - '3001:80'
+      - '{{ port }}:80'
     environment:
       - NODE_ENV=development
       - CI=true
