:white_check_mark: Chore: adds test integration of subject

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll",
+    "test": "react-scripts test --watchAll --env=jest-environment-jsdom-sixteen",
     "test:coverage": "npm test -- --env=jsdom --coverage",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
@@ -50,6 +50,7 @@
     "@storybook/node-logger": "^6.1.15",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.15",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "react-hooks-helper": "^1.6.0"
   }
 }
