--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@storybook/node-logger": "^6.1.15",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.15",
+    "@testing-library/react-hooks": "^5.0.3",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "react-hooks-helper": "^1.6.0"
   }
