--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.0",
     "polished": "^4.1.0",
     "react": "^16.13.1",
+    "react-aws-s3": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.25",
