--- a/contrib/.env-sample
+++ b/contrib/.env-sample
@@ -6,6 +6,5 @@ REACT_APP_GOOGLE_CLIENT_ID=
 S3_BUCKET_NAME=
 S3_DIR_NAME= /* optional */
 S3_REGION=
-S3_ACESS_KEY_ID=
+S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY= /* optional */
-S3_URL= /* optional */
