--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "axios": "^0.21.0",
     "polished": "^4.1.0",
     "react": "^16.13.1",
-    "react-aws-s3": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.25",
     "react-router-dom": "^5.2.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
     "styled-media-query": "^2.1.2",
