--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.25",
     "react-router-dom": "^5.2.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
     "styled-media-query": "^2.1.2",
@@ -22,7 +23,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll",
+    "test": "react-scripts test --watchAll --env=jest-environment-jsdom-sixteen",
+    "test:coverage": "npm test -- --env=jsdom --coverage",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
@@ -49,6 +51,8 @@
     "@storybook/node-logger": "^6.1.15",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.15",
+    "@testing-library/react-hooks": "^5.0.3",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "react-hooks-helper": "^1.6.0"
   }
 }
