--- a/contrib/.env-sample
+++ b/contrib/.env-sample
@@ -3,10 +3,10 @@ REACT_APP_GOOGLE_CLIENT_ID=
 
 // AWS - S3 
 
-S3_BUCKET_NAME=
-S3_DIR_NAME= /* optional */
-S3_REGION=
-S3_ACCESS_KEY_ID=
-S3_SECRET_ACCESS_KEY= /* optional */
+REACT_APP_S3_BUCKET_NAME=
+REACT_APP_S3_DIR_NAME= /* optional */
+REACT_APP_S3_REGION=
+REACT_APP_S3_ACCESS_KEY_ID=
+REACT_APP_S3_SECRET_ACCESS_KEY= /* optional */
 
-API=
+REACT_APP_API=
