--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
+    "moment": "^2.29.1",
     "polished": "^4.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
